# python-tplink-omada

./: .flake8  .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: adr.md  omadacid-path-inventory.md
omada_client/: __init__.py  auth.py  client.py  config.py  exceptions.py  logging_config.py  mac.py  wifi_payload_utils.py
omada_client/resources/: __init__.py  ap_groups.py  aps.py  base.py  devices.py  olts.py  sites.py  switches.py  wifi_networks.py  wlan_groups.py
spec/patches/: DstTimeDTO.json  authentication.json  createNewSite.json
tests/: test_ap_groups.py  test_aps.py  test_auth.py  test_client.py  test_devices.py  test_fix_spec.py  test_mac.py  test_olts.py  test_sites.py  test_switches.py  test_wifi_networks.py  test_wifi_payload_utils.py  test_wlan_groups.py
tools/: __init__.py  fetch_spec.py  fix_spec.py  generate_models.py  validate_spec.py
