[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python-tplink-omada"
version = "0.1.0"
description = "Python client library for TP-Link Omada SDN Controller"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "NetAuto" }]
dependencies = [
  "httpx>=0.27.0",
  "openapi-spec-validator>=0.7.1",
  "pycountry>=24.6.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-mock>=3.14.0",
  "black>=26.1.0",
  "flake8>=7.1.0",
  "mypy>=1.11.0",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["omada_client*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.black]
line-length = 120
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | migrations
)/
'''

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
strict_optional = true
exclude = [
    "^tests/*"
]
